--- a/EditBar/Dnn.EditBar.UI/Dnn.EditBar.UI.csproj
+++ b/EditBar/Dnn.EditBar.UI/Dnn.EditBar.UI.csproj
@@ -224,6 +224,7 @@
     <Content Include="editBar\resources\ContentEditorManager\Js\ModuleManager.js" />
     <Content Include="editBar\resources\ContentEditorManager\Js\ModuleService.js" />
     <Content Include="editBar\resources\ContentEditorManager\Styles\ContentEditor.css" />
+    <Content Include="editBar\resources\ContentEditorManager\Styles\ContentEditor.rtl.css" />
     <Content Include="editBar\scripts\AddExistingModule.js" />
     <Content Include="editBar\scripts\AddModule.js" />
     <Content Include="editBar\images\bottomArrow.png" />
@@ -247,6 +248,7 @@
     <Content Include="editBar\scripts\contrib\require.js" />
     <Content Include="editBar\scripts\contrib\text.js" />
     <Content Include="editBar\scripts\editBarContainer.js" />
+    <Content Include="editBar\scripts\main.rtl.js" />
     <Content Include="editBar\scripts\PageSettings.js" />
     <Content Include="editBar\scripts\eventEmitter.js" />
     <Content Include="editBar\scripts\gateway.js" />
@@ -277,7 +279,9 @@
     <EmbeddedResource Include="editBar\App_LocalResources\EditBar.fa-IR.resx" />
     <EmbeddedResource Include="editBar\App_LocalResources\EditBar.resx" />
     <EmbeddedResource Include="editBar\App_LocalResources\AddModule.resx" />
+    <EmbeddedResource Include="editBar\resources\ContentEditorManager\App_LocalResources\SharedResources.fa-IR.resx" />
     <EmbeddedResource Include="editBar\resources\ContentEditorManager\App_LocalResources\SharedResources.resx" />
+    <EmbeddedResource Include="editBar\resources\ContentEditorManager\LocalResources.fa-IR.resources" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="Module.build" />
